# APDV

./: .env  .gitignore  APDV_CA2_sk (1).ipynb  Dockerfile  DockerfileV1  Dockerfile_dagster  README.md  Readme.txt  companies.ipynb  dagster-prod.yaml  docker-compose-v1.yaml  docker-compose.yaml  enterprises.ipynb  enterprises.py  environment.yml  load_from_mongo.ipynb  pyproject.toml  repo.py  requirements.txt  setup.sh  workspace-prod.yaml  workspace.yaml
dash_app/: .env  Dockerfile  app.py  prod.env  requirements.txt  sample_dash.py
dash_app/src/: .env  app.py  prod.env
dash_app/src/models/: country_codes.py  (+3 more)
dash_examples/: Dockerfile  Dockerfile_dagster  dagster.yaml  docker-compose.yaml  requirements.txt  workspace.yaml
dash_examples/dagster_repo/: pipeline.py
dash_examples/dash_app/: app.py  multiplot_app.py
data/raw/: enterprises_raw.csv
enterprises/: definitions.py  resources.py
enterprises/assets/: constants.py  dash_2.py  enterprise.py  enterprises.py  enterprises_visualizations.py  plotly_sample.py
final-project/: download_files.py  explore.py  requirements.txt
final-project/immigration/: pipeline.py
notebooks/: dash_example.ipynb  enterprises-visualizations.ipynb  notebook-2.ipynb  plotly_example.ipynb
notebooks/output/: dash_sample.ipynb
week1/: week1.py
week1/jupiter-notebooks/: jupter-1.ipynb
workflow/: definitions.py  jobs.py  schedules.py
workflow/assets/: city_codes.py  constants.py  country_codes.py  employment.py  enterprise.py  enterprises_visualizations.py  sql_db_utils.py  tourism.py  tourism_enterprises.py  utils.py
(+22 files in other folders)
