[project]
name = "apdv-project"
version = "0.0.1"
description = "Dagster Essentials"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster==1.10.*",
    "dagster-webserver",
    "dagster-cloud",
    "pandas",
    "pandas[parquet]",
    "shapely",
    "matplotlib",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[tool.dagster]
module_name = "workflow.definitions"
code_location_name = "workflow"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["enterprises"]